welcome.lessons.welcome.loopdowhile.Poucet2.scala.code
var nbPas=0
do {
  while (sortieTrouvee()==false){
    var nbBiscuit=0
    avance()
    if (estSurBiscuit()==true){
       nbBiscuit=nbBiscuit+1
    }
  }}while (crossing()==false)
   if (nbBiscuit<3){
    droite()
    }
   if (nbBiscuit>=3){
     gauche()
   }

